--- a/css/main.css
+++ b/css/main.css
@@ -46,10 +46,10 @@ table.TF td {
   text-align: center;
 }
 
-.test-button {
+#test-button {
   border-radius: 7px;
   background: #00bdff73;
-  padding: 6px 11px;
+  padding: 8px 14px;
   line-height: 4em;
   color: #352e22;
   cursor: pointer;
